Modified conversion logic.
